overlays/dev/image-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
spec:
  template:
    spec:
      containers:
        - name: devops-app
          image: ghcr.io/hugpaim/devops-lab-app:latest
          imagePullPolicy: Always
