overlays/dev/replica-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: devops-app
          resources:
            requests:
              cpu:    "25m"
              memory: "32Mi"
            limits:
              cpu:    "100m"
              memory: "128Mi"
