overlays/dev/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-app
spec:
  rules:
    - host: devops-app.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-devops-app
                port:
                  name: http
